--- a/index.html
+++ b/index.html
@@ -919,7 +919,7 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Ghosts with this evidence can be made visible with a <a href="#dots-sensor">D.O.T.S sensor</a>.</p>
+                            <p>Ghosts with this evidence can be made visible with a <a href="#dots-projector">D.O.T.S projector</a>.</p>
                             <p>Place such a sensor on the ground to cover the largest possible area with it and watch it for a silhouette quickly running through the area of the projected light dots.</p>
                             <p>It is possible to see these silhouettes with the naked eye, but it is easier to spot them through night vision.</p>
                         </section>
@@ -988,11 +988,11 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>This camera has been fine-tuned to take videos of the paranormal. The camera has a live feed to your <a href="#truck">base of operations</a>.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $50</p>
 
-                            <p><i class="fa fa-truck" title="Truck capacity"></i> 4 <i>(one always provided free)</i></p>
+                            <p><i class="fa fa-truck" title="Truck capacity"></i> 6 <i>(one always provided for free)</i></p>
                         </section>
                         <section class="page-half">
                             <div class="centered"> 
@@ -1010,11 +1010,11 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>A laser light projector that detects paranormal movements, highlighting entities within it's range.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $65</p>
 
-                            <p><i class="fa fa-truck" title="Truck capacity"></i> 2 <i>(one always provided free)</i></p>
+                            <p><i class="fa fa-truck" title="Truck capacity"></i> 2 <i>(one always provided for free)</i></p>
                         </section>
                         <section class="page-half">
                             <div class="centered"> 
@@ -1032,11 +1032,11 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>The electromagnetic field reader is a handheld device used to detect fluctuations in electromagnetic fields left behind by paranormal activity. It will beep with increasing pitch depending on the amount of activity nearby.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $45</p>
 
-                            <p><i class="fa fa-truck" title="Truck capacity"></i> 2 <i>(one always provided free)</i></p>
+                            <p><i class="fa fa-truck" title="Truck capacity"></i> 2 <i>(one always provided for free)</i></p>
                         </section>
                         <section class="page-half">
                             <div class="centered"> 
@@ -1054,11 +1054,11 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>Also known as automatic writing, if you place this book near a ghost it will allow certain ghosts to write in it.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $40</p>
 
-                            <p><i class="fa fa-truck" title="Truck capacity"></i> 2 <i>(one always provided free)</i></p>
+                            <p><i class="fa fa-truck" title="Truck capacity"></i> 2 <i>(one always provided for free)</i></p>
                         </section>
                         <section class="page-half">
                             <div class="centered"> 
@@ -1076,11 +1076,11 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>This electronic voice phenomenon recorder or spirit box can capture paranormal radio frequencies that can allow communication with spirits.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $50</p>
 
-                            <p><i class="fa fa-truck" title="Truck capacity"></i> 2 <i>(one always provided free)</i></p>
+                            <p><i class="fa fa-truck" title="Truck capacity"></i> 2 <i>(one always provided for free)</i></p>
                         </section>
                         <section class="page-half">
                             <div class="centered"> 
@@ -1098,11 +1098,11 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>This UV light can spot even the most subtle paranormal prints and is one of the most vital pieces of equipment for tracking ghosts.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $35</p>
 
-                            <p><i class="fa fa-truck" title="Truck capacity"></i> 2 <i>(one always provided free)</i></p>
+                            <p><i class="fa fa-truck" title="Truck capacity"></i> 2 <i>(one always provided for free)</i></p>
                         </section>
                         <section class="page-half">
                             <div class="centered"> 
@@ -1120,11 +1120,11 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>The flashlight is a basic hunting tool designed to help you when the lights go out.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $30</p>
 
-                            <p><i class="fa fa-truck" title="Truck capacity"></i> 4 <i>(one always provided free)</i></p>
+                            <p><i class="fa fa-truck" title="Truck capacity"></i> 4 <i>(one always provided for free)</i></p>
                         </section>
                         <section class="page-half">
                             <div class="centered"> 
@@ -1142,11 +1142,11 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>This camera has been fine-tuned to take photos of the paranormal. This will help in situations where more evidence is needed.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $40</p>
 
-                            <p><i class="fa fa-truck" title="Truck capacity"></i> 3 <i>(one always provided free)</i></p>
+                            <p><i class="fa fa-truck" title="Truck capacity"></i> 3 <i>(one always provided for free)</i></p>
                         </section>
                         <section class="page-half">
                             <div class="centered"> 
@@ -1164,9 +1164,9 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>A candle is a great way of keeping a room lit when the lights go out as it isn't dependent on electricity.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $15</p>
 
                             <p><i class="fa fa-truck" title="Truck capacity"></i> 4</p>
                         </section>
@@ -1186,9 +1186,9 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>A crucifix is used to stop ghosts from entering their physical form to attack you. It's adviced to place them near the ghost.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $30</p>
 
                             <p><i class="fa fa-truck" title="Truck capacity"></i> 2</p>
                         </section>
@@ -1208,9 +1208,9 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>A glowstick can be used to help navigate in larger locations or used as an area UV light.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $20</p>
 
                             <p><i class="fa fa-truck" title="Truck capacity"></i> 2</p>
                         </section>
@@ -1230,9 +1230,9 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>A head mounted camera can be used to help teams track each other and to see ghost orbs.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $60</p>
 
                             <p><i class="fa fa-truck" title="Truck capacity"></i> 4</p>
                         </section>
@@ -1252,9 +1252,9 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>A simple lighter used for lighting candles and smudge sticks.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $10</p>
 
                             <p><i class="fa fa-truck" title="Truck capacity"></i> 4</p>
                         </section>
@@ -1274,11 +1274,11 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>A motion sensor is a sensor that can detect the most subtle changes in the atmosphere around it. This is linked live to the map in your <a href="#truck">truck</a>.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $100</p>
 
-                            <p><i class="fa fa-truck" title="Truck capacity"></i> 2</p>
+                            <p><i class="fa fa-truck" title="Truck capacity"></i> 4</p>
                         </section>
                         <section class="page-half">
                             <div class="centered"> 
@@ -1296,9 +1296,9 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>This can detect paranormal sound through walls at a great distance. This is a portable version of the sound sensor.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $50</p>
 
                             <p><i class="fa fa-truck" title="Truck capacity"></i> 2</p>
                         </section>
@@ -1318,11 +1318,11 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>Salt is toxic to most kinds of ghosts and will reveal their footsteps under a UV light.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $15</p>
 
-                            <p><i class="fa fa-truck" title="Truck capacity"></i> 4</p>
+                            <p><i class="fa fa-truck" title="Truck capacity"></i> 3</p>
                         </section>
                         <section class="page-half">
                             <div class="centered"> 
@@ -1340,9 +1340,9 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>Sanity pills will increase your <a href="#sanity">sanity</a> level - therefore they are vital for larger locations, as these will allow you to be safer on a contract for longer periods.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $20</p>
 
                             <p><i class="fa fa-truck" title="Truck capacity"></i> 4</p>
                         </section>
@@ -1362,9 +1362,9 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>Burning smudge sticks near a ghost will prevent it from attacking for a period of time.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $15</p>
 
                             <p><i class="fa fa-truck" title="Truck capacity"></i> 4</p>
                         </section>
@@ -1384,11 +1384,11 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>A sound sensor is a sensor that can listen to the most quiet sounds and vibrations in the air. This gets displayed as data at your <a href="#truck">base of operations</a>.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $80</p>
 
-                            <p><i class="fa fa-truck" title="Truck capacity"></i> 2</p>
+                            <p><i class="fa fa-truck" title="Truck capacity"></i> 4</p>
                         </section>
                         <section class="page-half">
                             <div class="centered"> 
@@ -1406,9 +1406,9 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>An upgraded version of the flashlight. Designed to help you in large areas when the lights go out.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $50</p>
 
                             <p><i class="fa fa-truck" title="Truck capacity"></i> 4</p>
                         </section>
@@ -1428,11 +1428,11 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>A thermometer will help you discover the location of a ghost quicker by getting the temperature of the room.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $30</p>
 
-                            <p><i class="fa fa-truck" title="Truck capacity"></i> 2</p>
+                            <p><i class="fa fa-truck" title="Truck capacity"></i> 3</p>
                         </section>
                         <section class="page-half">
                             <div class="centered"> 
@@ -1450,11 +1450,11 @@
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Description...</p>
+                            <p>A tripod can be used to mount video cameras on.</p>
 
-                            <p><i class="fa fa-tag" title="Price"></i> $999</p>
+                            <p><i class="fa fa-tag" title="Price"></i> $25</p>
 
-                            <p><i class="fa fa-truck" title="Truck capacity"></i> 6</p>
+                            <p><i class="fa fa-truck" title="Truck capacity"></i> 5</p>
                         </section>
                         <section class="page-half">
                             <div class="centered"> 
