--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <link rel="stylesheet" href="assets/fonts/fontawesome/css/fontawesome.min.css">
         <link rel="stylesheet" href="assets/fonts/fontawesome/css/solid.min.css">
 
-        <link rel="stylesheet" href="style.css?v=15">
-        <script src="script.js?v=13"></script>
+        <link rel="stylesheet" href="style.css?v=16">
+        <script src="script.js?v=14"></script>
         
         <link rel="manifest" href="manifest.json?v=6">
     </head>
@@ -1769,6 +1769,24 @@
                     </div>
                 </article>
 
+
+                <!-- EASTER EGG -->
+                
+                <article class="page">
+                    <header class="page-header">
+                        <h1 id="666">6̵̧̻͎͙͛́̈͊̈̌̾͒͘͝6̶̻̹̩͈̞͎̜͍͊̅͋͑̔̀͊6̷̢̧̢̨̧͙͎̝̝̮̹͎͋̈͘</h1>
+                    </header>
+                    <div class="page-body page-body-centered">
+                        <div>
+                            <h2><i class="fa fa-ghost"></i> Page not found.</h2>
+                            <p>
+                                <div class="tape" data-soundurl="assets/sounds/Adrift CURSED.mp3"><i class="fa fa-volume-high"></i> t̵͈̻̹̰͒̈́̚f̸̢̈́̈͘î̷͖̯̱ͅr̷̛͍̠̮͐́̑͜d̴͎̞̐̋͊̿Ạ̵̖̥͖͑̓͒͝</div>
+                            </p>
+                            <p><a href="#contents">Contents list</a></p>
+                        </div>
+                    </div>
+                </article>
+
             </div>
 
             <div id="page-navigation">
@@ -1780,6 +1798,11 @@
                     <span id="page-number-right" class="page-number" class="btn-page">?</span>
                     <button id="btn-page-next" class="btn-page"><i class="fa fa-share"></i></button>
                 </div>
+            </div>
+
+            <div id="radio">
+                <img src="assets/images/radio.png">
+                <audio id="radio-audio">
             </div>
 
         </div>
