Disclaimer, ol style

--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
                             <p>Ghost&nbsp;Investigation&nbsp;Encyclopedia is a book containing everything you need to know about investigating ghosts.</p>
                             <p>It is an in-depth version of the "Ghost Huntin' - A Survivors Guide" journal commonly used by paranormal investigators.</p>
                             <p><b>WORK IN PROGRESS</b></p>
+
+                            <h2>Disclaimer</h2>
+                            <p>Discovering the world of paranormal investigation yourself can be a lot more fun than looking everything up, so read this encyclopedia at your own discretion!</p>
                         </section>
                         <section class="page-half">
                             <h2>Version</h2>
